Search book by ISBN or Title or Author implemented

--- a/Presentation/Store.Web/Views/Search/Index.cshtml
+++ b/Presentation/Store.Web/Views/Search/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.Id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ISBN)
+                @Html.DisplayNameFor(model => model.Isbn)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Author)
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ISBN)
+                @Html.DisplayFor(modelItem => item.Isbn)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Author)
