--- a/Presentation/Store.Web/Views/Shared/_Layout.cshtml
+++ b/Presentation/Store.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,24 @@
                 <input class="form-control mr-sm-2" type="search" name="query" placeholder="автор или название"/>
                 <button type="submit" class="btn btn-outline-success my-2 my-sm-0">Искать</button>
             </form>
+            <span class="navbar-text ml-auto">
+                @{
+                    Cart cart;
+                    if (!Context.Session.TryGetCart(out cart))
+                    {
+                        cart = new Cart();
+                    }
+
+                    if (cart.Items.Count == 0)
+                    {
+                        @:Корзина пуста
+                    }
+                    else
+                    {
+                        @:Товаров @cart.Items.Count на сумму @cart.Amount
+                    }
+                }
+            </span>
         </nav>
     </header>
     <div class="container">
