Add Order, OrderItem. Cart refactored

--- a/Presentation/Store.Web/Views/Shared/_Layout.cshtml
+++ b/Presentation/Store.Web/Views/Shared/_Layout.cshtml
@@ -27,19 +27,13 @@
             </form>
             <span class="navbar-text ml-auto">
                 @{
-                    Cart cart;
-                    if (!Context.Session.TryGetCart(out cart))
+                    if (Context.Session.TryGetCart(out Cart cart) && cart.TotalCount > 0)
                     {
-                        cart = new Cart();
-                    }
-
-                    if (cart.Items.Count == 0)
-                    {
-                        @:Корзина пуста
+                        <a href="">Товаров @cart.TotalCount на сумму @cart.TotalPrice</a>
                     }
                     else
                     {
-                        @:Товаров @cart.Items.Count на сумму @cart.Amount
+                        @:Корзина пуста
                     }
                 }
             </span>
