Упростить код заказа 2

--- a/Presentation/Store.Web/Views/Book/Index.cshtml
+++ b/Presentation/Store.Web/Views/Book/Index.cshtml
@@ -9,6 +9,6 @@
 <p><strong>@Model.Description</strong></p>
 <p>Цена: <strong>@Model.Price</strong></p>
 <form action="@Url.Action("AddItem", "Order")" method="post">
-    <input type="hidden" name="id" value="@Model.Id"/>
-    <button class="btn btn-outline-success" type="submit">В корзину</button>
+    <input type="hidden" name="bookId" value="@Model.Id"/>
+    <button class="btn btn-outline-success" type="submit">В корзину</button> 
 </form>
